
    o	.Alias, reshapeLong(), reshapeWide() are defunct.


DOCUMENTATION CHANGES

    o	`Writing R Extensions' now has an example of calling R's
	random numbers from FORTRAN via C.


UTILITIES

    o	Sweave(), Stangle() and friends in package tools. Sweave allows
	mixing latex documentation and R code in a single source file:
	the R code can be replaced by its output (text, figures) to
	allow automatic report generation.

    o	Rdconv can convert to the S4 .sgml format. 


C-LEVEL FACILITIES

    o	findInterval(xt[],n,x,...) gives the index (or interval number)
	of x in the sorted sequence xt[].  There's an
	F77_SUB(interv)(.) to be called from Fortran; this used to be
	part of predict.smooth.spline's underlying Fortran code.

    o	Substitutes for (v)snprintf will be used if the OS does not
	supply one, so tests for HAVE_(V)SNPRINTF are no longer needed.

    o	The DUP and NAOK arguments in a .C() call are not passed on
	to the native routine being invoked.  Any code that relied on
	the old behaviour will need to be modified.

    o	log1p is only provided in Rmath.h if it is not provided by the
	platform, in which case its name is not remapped, but a
	back-compatibility entry point Rf_log1p is provided.
	Applications using libRmath may need to be re-compiled.

    o	The methods used by optim() have entry points in R_ext/Applic.h
	and have a more general interface documented in `Writing R
	Extensions'.


BUG FIXES

    o	match, unique and duplicated were not declaring all NaNs to be
	equal, yet not always distinguishing NA and NaN.  This was
	very rare except for data imported as binary numbers.

    o   The error handler recover protects itself against errors in
        dump.frames and uses a new utility, limitedLabels, to generate
        names for the dump that don't inadvertently blow the limit on
        symbol length.  (TODO:  either fix dump.frames accordingly or
        remove the limit--say by truncating very long symbols?)
