@@ -30,6 +30,7 @@ use File::Find;
 use File::Path;
 use Getopt::Long;
 use R::Dcf;
+use R::Logfile;
 use R::Utils;
 use R::Rd;
 #use strict;
@@ -37,7 +38,7 @@ use R::Rd;
 ## don't buffer output
 $| = 1;
 
-my $revision = ' $Revision: 1.33 $ ';
+my $revision = ' $Revision: 1.34 $ ';
 my $version;
 my $name;
 $revision =~ / ([\d\.]*) /;
